# emnet

./: LICENSE  LICENSE.txt  README.md  pyproject.toml
src/emnet/: __about__.py  emnet.py  emnet.tcss  utils.py
tests/: __init__.py
