[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "emnet"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "smoosermartin", email = "s.mooser.martin@umail.leidenuniv.nl" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "numpy",
  "sentence-transformers",
  "textual",
  "torch"
]
[project.scripts]
emnet = "emnet.emnet:main"

[project.urls]
Documentation = "https://github.com/smoosermartin/emnet#readme"
Issues = "https://github.com/smoosermartin/emnet/issues"
Source = "https://github.com/smoosermartin/emnet"

[tool.hatch.version]
path = "src/emnet/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/emnet tests}"

[tool.coverage.run]
source_pkgs = ["emnet", "tests"]
branch = true
parallel = true
omit = [
  "src/emnet/__about__.py",
]

[tool.coverage.paths]
emnet = ["src/emnet", "*/emnet/src/emnet"]
tests = ["tests", "*/emnet/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
